Working list with local storage functionality!

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                         <form>
                             <div class="form-group">
                                 <input type="text" placeholder="Add a list item" id="input-list">
-                                <button id="submit-btn" class="btn btn-primary">Submit</button>
+                                <button type="submit" id="submit-btn" class="btn btn-primary">Submit</button>
+                                <button type="reset" id="clear-btn" class="btn btn-danger">Clear</button>
                             </div>
                         </form>
                     </div>
